app/assets/stylesheets/application.css.scss
@import 'normalize';
@import 'common';
@import "userprofile";
@import "pages";
@import "posts_projects";
@import "welcome";
@import "category";
@import "newlayout";
@import "used_bootstrap";

#apply_description {
  min-height: 400px;
}

@media (max-width: 1080px) {
  .nav-title {
    display: none;
  }
  .nav_article {
    .link {
      margin-left: 0.8em !important;
    }
  }
}

@media (max-width: 800px)  {
  .border {
    display: none;
  }
}

